--- a/rs232c-app/build.gradle
+++ b/rs232c-app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
     implementation 'no.tornado:tornadofx:1.7.20'
+    implementation 'org.scream3r:jssc:2.8.0'
 }
 
 
