--- a/rs232c-app/build.gradle
+++ b/rs232c-app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation 'no.tornado:tornadofx:1.7.20'
     implementation 'org.scream3r:jssc:2.8.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.4.2'
 }
 
 
