--- a/rs232c-app/build.gradle
+++ b/rs232c-app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-group 'com.iu5'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -17,12 +16,21 @@ javafx {
     modules = ['javafx.controls', 'javafx.graphics']
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'FileTransferAppKt'
+        )
+    }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
 compileKotlin {
     kotlinOptions.jvmTarget = "11"
 }
 
 application {
-    mainClassName = "FileTransferApp"
+    mainClassName = "FileTransferAppKt"
 }
 
 dependencies {
